--- a/src/components/Alumnos/alumno.css
+++ b/src/components/Alumnos/alumno.css
@@ -12,6 +12,16 @@
   margin-right: 1.5%;
 }
 
+.container-tabla-notas {
+  height: 350px;
+  background-color: transparent;
+  display: block;
+  overflow-y: auto;
+  margin-left: 2%;
+  margin-right: 1.5%;
+}
+
+
 .container-publicacion {
   margin-left: auto;
   margin-right: auto;
@@ -28,4 +38,8 @@
   color: blue;
   width: 8%;
   text-align: left;
+}
+
+.probarcolores {
+  color: rgba(63, 163, 24, 0.945);
 }
