--- a/Frontend/src/components/Maestros/maestro.css
+++ b/Frontend/src/components/Maestros/maestro.css
@@ -12,6 +12,13 @@
   margin-right: 1.5%;
 }
 
+.container-tabla-publicacion {
+  height: 375px;
+  display: block;
+  margin-left: 2%;
+  margin-right: 1.5%;
+}
+
 .container-tabla-notas {
   height: 350px;
   background-color: transparent;
