--- a/Frontend/src/components/Maestros/maestro.css
+++ b/Frontend/src/components/Maestros/maestro.css
@@ -52,7 +52,7 @@
   color: blue;
   text-align: left;
   padding: 0;
-  box-sizing : content-box;
+  box-sizing: content-box;
 }
 
 .label-publicacion {
@@ -72,6 +72,12 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   margin-top: 0.8%;
+}
+
+.container-tabla-observaciones {
+  height: 215px;
+  display: block;
+  overflow: auto;
 }
 
 .probarcolores {
