yo creo que ahi quedo con procedimientos de maestros

--- a/Frontend/src/components/Maestros/maestro.css
+++ b/Frontend/src/components/Maestros/maestro.css
@@ -80,6 +80,13 @@
   overflow: auto;
 }
 
+.container-tabla-observacioness {
+  height: 205px;
+  display: block;
+  overflow: auto;
+}
+
+
 .container-tabla-respuestas {
   height: 186px;
   display: block;
